# roger_hand_ros

./: CMakeLists.txt  README.md  README_cn.md  README_en.md  package.xml
config/: joint_names_roger_hand_description.yaml  roger_hand_control.yaml
include/roger_hand_ros/: hand_driver.h
include/zgt_hand_ros/: hand_driver.h
launch/: display.launch  gazebo.launch  roger_hand_description_gazebo.launch  roger_hand_gazebo.launch  roger_hand_gazebo_controller.launch  zgt_hand_server.launch
meshes/: index_finger_far_knuckle_link.STL  ring_finger_motor_link.STL  thumb_1_link.STL
roger_hand_bringup/: CMakeLists.txt  package.xml
roger_hand_bringup/launch/: roger_hand_description_gazebo.launch  roger_hand_description_rviz.launch  roger_hand_server.launch
roger_hand_description/: CMakeLists.txt  README.md  package.xml
roger_hand_description/config/: joint_names_roger_hand_description.yaml  roger_hand_control.yaml
roger_hand_description/launch/: gazebo.launch  roger_hand_description_gazebo.launch  roger_hand_gazebo.launch  roger_hand_gazebo_controller.launch  roger_hand_gazebo_description.launch  roger_hand_rviz.launch
roger_hand_description/meshes/: base_link.STL  index_finger_motor_link.STL  index_finger_near_knuckle_link.STL  little_finger_far_knuckle_link.STL  little_finger_motor_link.STL  little_finger_near_knuckle_link.STL  middle_finger_far_knuckle_link.STL  middle_finger_motor_link.STL  middle_finger_near_knuckle_link.STL  ring_finger_far_knuckle_link.STL  ring_finger_near_knuckle_link.STL  thumb_1_motor_link.STL  thumb_2_far_knuckle_link.STL  thumb_2_motor_link.STL  thumb_2_near_knuckle_link.STL
roger_hand_description/rviz/: roger_hand.rviz
roger_hand_description/urdf/: roger_hand_description.csv  roger_hand_description.urdf  roger_hand_description.urdf.xacro
roger_hand_msgs/: CMakeLists.txt  package.xml
roger_hand_msgs/msg/: hand_state.msg
roger_hand_msgs/srv/: ampere_feedback.srv  clear_error.srv  finger_pose.srv  hand_pose.srv
roger_hand_ros/: CMakeLists.txt  package.xml
roger_hand_ros/include/roger_hand_ros/: hand_control.h  hand_driver.h
roger_hand_ros/src/: hand_driver.cpp  hand_driver_node.cpp
src/: hand_control.cpp  hand_driver.cpp  hand_driver_node.cpp
srv/: hand_enable.srv
urdf/: roger_hand_description.csv  roger_hand_description.urdf  roger_hand_description.urdf.xacro
